--- a/5_cluster-exploring.ipynb
+++ b/5_cluster-exploring.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Domin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\Domin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "# handle imports\n",
     "from gensim.models import Word2Vec\n",
@@ -18,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "im tired man\n",
-      "['im_tired', 'man']\n",
-      "[2 2] 2 positive_cluster\n"
+      "really saddens kyle referred kid defend people sympathy trayvon , walking home , unarmed un - white .\n",
+      "['really', 'saddens', 'kyle', 'referred', 'kid', 'defend', 'people', 'sympathy', 'trayvon', ',', 'walking', 'home', ',', 'unarmed', 'un_-', 'white', '.']\n",
+      "[2 1 2 1 2 1 1 2 1 1 1 2 1 1 1 2 2] 1 negative_cluster\n"
      ]
     }
    ],
