--- a/6_prediction-testing.ipynb
+++ b/6_prediction-testing.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Domin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\Domin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "# handle imports\n",
     "import pandas as pd\n",
@@ -29,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,28 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.10295434198746643 0.16379859783301465 0.8026981450252951\n",
-      "                                                content  target  prediction\n",
-      "0                               unhappy dog like though       1           2\n",
-      "1     talking driver im goinghe said hed love go new...       1           1\n",
-      "2     anybody know rand likely fall dollar ? got mon...       1           1\n",
-      "3                      miss going gig liverpool unhappy       1           2\n",
-      "4                  isnt new riverdale tonight ? unhappy       1           2\n",
-      "...                                                 ...     ...         ...\n",
-      "1112  wish knock lang talaga new school year good co...       1           2\n",
-      "1113                                  miss much unhappy       1           2\n",
-      "1114                                            unhappy       1           2\n",
-      "1115              hi instant message friend friend lang       1           2\n",
-      "1116                       hindi close friend ? unhappy       1           2\n",
-      "\n",
-      "[1117 rows x 3 columns]\n"
+      "accuracy_neutral: 0.16379859783301465, accuracy_negative: 0.10295434198746643, accuracy_positive: 0.8026981450252951\n"
      ]
     }
    ],
